--- a/overconfidence_measurement/q_6.html
+++ b/overconfidence_measurement/q_6.html
@@ -3,7 +3,7 @@
 {{ endblock }}
 {{ block content }}
 
-<p>In welechem Jahr wurde J.S. Bach geboren?<p/>
+<p>In welchem Jahr wurde J.S. Bach geboren?<p/>
 
     {{ formfields }}
     {{ next_button }}
