--- a/fernandes/InstructionQuestionnaire.html
+++ b/fernandes/InstructionQuestionnaire.html
@@ -1,5 +1,5 @@
 {{ extends 'global/Page.html' }}
-{{ block title }}Teil 2: Fragebogen{{ endblock }}
+{{ block title }}Teil 3: Fragebogen 2{{ endblock }}
 
 {{ block content }}
     <p>
