--- a/fernandes/Fernandes1.html
+++ b/fernandes/Fernandes1.html
@@ -1,5 +1,5 @@
 {{ extends 'global/Page.html' }}
-{{ block title }}Finanzkompetenz (1/2){{ endblock }}
+{{ block title }}Teil 3: Fragebogen 2{{ endblock }}
 
 {{ block content }}
 
