--- a/banks_2_anleitung/Anleitung_Banks.html
+++ b/banks_2_anleitung/Anleitung_Banks.html
@@ -15,6 +15,7 @@ Für jede der 25 Investitionsentscheidungen haben Sie einen verfügbaren Betrag 
 <p>Auszahlung bei <strong>Kopf</strong>: (65 * 4,80) + (35 * 0,00) = 312 ECU <br>
 Auszahlung bei <strong>Zahl</strong>: (65 * 0,00) + (35 * 1,20) = 42 ECU</p>
 <p style="text-align: justify;">Wenn Sie mit einer Anlageentscheidung fertig sind, klicken Sie auf die Schaltfläche "Weiter", um zur nächsten Anlageentscheidung zu gelangen. Nachdem Sie die ersten 10 Entscheidungen getroffen haben, wird sich die Aufgabe ein wenig ändern. Anstelle von nur zwei Vermögenswerten werden Ihnen dann 15 Anlagemöglichkeiten mit jeweils fünf Vermögenswerten präsentiert, in die Sie investieren können. </p>
+<p>Sollte dieses Experiment zur Auszahlung ausgewählt werden, dann wird durch Zufall eine der 25 Investitionsrunden ausgewählt und Sie werden entsprechend der Investitionen, die Sie dort getätigt haben, ausgezahlt.</p>
     {{ next_button }}
 {{ endblock }}
 
