added seat number

--- a/combined_intro/Page1.html
+++ b/combined_intro/Page1.html
@@ -11,7 +11,10 @@
     <p>Bitte kommunizieren Sie nicht mit den anderen Teilnehmenden und verwenden Sie während der Studien nicht Ihr Smartphone.</p>
     <p>Vielen Dank für Ihre Teilnahme!</p>
 
+    <p>Bitte geben Sie Ihre Sitzplatznummer ein, bevor sie fortfahren.</p>
+
     {{ formfields }}
+
     {{ next_button }}
 
 {{ endblock }}
